<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/account_background"
    tools:context=".Select_Account">

    <Button
        android:id="@+id/add_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/add_button"
        android:onClick="openCreate"
        android:text="@string/empty_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/logo_background"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toStartOf="@+id/main_scroll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/logo_background" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hnb_logo" />

    <Button
        android:id="@+id/button6"
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/hamburger_menu"
        android:onClick="menu"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toTopOf="@+id/logo" />

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="70dp"
        app:layout_constraintTop_toBottomOf="@+id/logo_background"
        tools:layout_editor_absoluteX="264dp">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="90dp">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/background_account" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/top_details_block"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    app:cardBackgroundColor="@color/logo_background"
                    app:cardCornerRadius="25dp"
                    app:cardElevation="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/top_details_block_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/account_information"
                            android:textColor="@color/Black"
                            android:textSize="35sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/label_available"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/available"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/colon1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:text="@string/colon"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/text_Available"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:text="346,206.65‬"
                                android:textAlignment="textEnd"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/label_total"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/total"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/colon2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="41dp"
                                android:text="@string/colon"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/text_total"
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                android:text="569,739.65‬"
                                android:textAlignment="textEnd"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/label_credit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="25dp"
                                android:text="@string/credit"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/colon3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="34dp"
                                android:text="@string/colon"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/text_credit"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:text="0.00"
                                android:textAlignment="textEnd"
                                android:textColor="@color/Black"
                                android:textSize="20sp" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/top_details_block">

                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>