<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="203dp"
            android:scaleType="fitXY"
            app:cardBackgroundColor="@color/default_project_background"
            app:cardCornerRadius="25dp"
            app:cardElevation="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp">


                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_name"
                    app:srcCompat="@color/default_text_colour" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="22dp"
                    app:layout_constraintStart_toEndOf="@+id/account_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/infor_icon_clicked" />

                <TextView
                    android:id="@+id/account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/account_name"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="16dp"
                    android:text="Joe Doe"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_name" />

                <TextView
                    android:id="@+id/lable_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="50dp"
                    android:text="Balance :"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/owner_name" />

                <TextView
                    android:id="@+id/account_ref"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="20dp"
                    android:text="Ref: 000000000000"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/account_name" />

                <TextView
                    android:id="@+id/lable_un_available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/colon2"
                    android:text="@string/un_available_balance"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toStartOf="@+id/colon2"
                    app:layout_constraintTop_toBottomOf="@+id/balance" />

                <TextView
                    android:id="@+id/colon2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_toLeftOf="@id/available_balance"
                    android:layout_weight="1"
                    android:text="@string/colon"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lable_un_available_balance"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="000,000,000,000"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/lable_balance"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/available_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:text="000,000,000,000"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lable_un_available_balance" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>